# recommender

./: Dockerfile  compose.yaml
backend/: Cargo.toml  Dockerfile  compose.yaml  shell.nix
backend/frontend/: README.md  package.json
backend/frontend/src/assets/: typography-styles.css
backend/frontend/src/components/: Content.vue  Food.vue  JsonEditor.vue  LoadingScreen.vue  RecipeEditor.vue
backend/frontend/src/router/: index.js
backend/frontend/src/views/: AboutView.vue  HomeView.vue  RecipeView.vue  SuperSecretAdminPanel.vue
backend/postgres_image/: schema.sql
backend/src/: main.rs  sql_queries.rs
frontend/: bun.lockb
frontend/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
frontend/.direnv/flake-inputs/: 0jjv82m6bs9v23qv8nrkwsbhzk41mxqa-source
frontend/backend/: server.js
frontend/public/persistent-storage/: rezepte.json
frontend/src/: App.vue
frontend/src/assets/: typography-styles.css
frontend/src/components/: Food.vue  Head.vue  Navbar.vue  RecipeCard.vue
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  ContactView.vue  HomeView.vue  LoginView.vue
postgres_image/: 10-schema.sql  20-ai-tools.sql  30-podcasts.sql  40-reviews.sql  Dockerfile  schema.sql
src/: sql_queries.rs
