[package]
name = "recommender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["password-hash"] }
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = "0.7.13"
tower-http = { version = "0.6.2", features = ["fs"] }
